# Excel_tool_transform

./: .gitignore  LICENSE  Manual_Testing_Guidelines_Rules.xlsx  README.md  __main__.py  agent_step1.py  cli.py  excel_to_airtest.py  hints.py  models.py  parsers.py  pyproject.toml  registry.py  requirements-dev.txt  requirements.txt  rules_parser.py  rules_to_suites.py  writer.py
.claude/agents/: game-flow-analyst.md
.github/workflows/: test.yml
docs/superpowers/plans/: 2026-06-22-backend-hardening.md
docs/superpowers/specs/: 2026-06-25-game-agnostic-base-design.md
generators/: pixon_generator.py
graphify-out/converted/: Manual_Testing_Guidelines_Rules_1772d73d.md
projects/: example_puzzle.py  lava_quest.py  pixon.py
templates/: excel_template.py
tests/: conftest.py  test_cli_errors.py  test_diagnostics.py  test_e2e.py  test_example_puzzle.py  test_handlers.py  test_helpers.py  test_inheritance.py  test_init_excel.py  test_init_project.py  test_lava_quest.py  test_new_actions.py  test_parsers.py  test_registry.py  test_rules_autoassets.py  test_rules_to_suites.py  test_tap_touch.py  test_validate_assets.py  test_writer.py
